--- a/version1.html
+++ b/version1.html
@@ -11,11 +11,8 @@
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-
-
-   
+      rel="stylesheet"/>
+  
   </head>
   <!-----------Body section---------->
   <body>
